--- a/workshop/11_keptn/04_Onboard_Service/Carts-Viewer.html
+++ b/workshop/11_keptn/04_Onboard_Service/Carts-Viewer.html
@@ -12,8 +12,8 @@
 </script>
 
 <body>
-    <div class="top"><iframe id="iframe1" height="32%" width="99.5%" src="http://carts.sockshop-dev.xxx.xxx.xxx.xxx.xip.io/"></iframe></div>
-    <div class="mid"><iframe id="iframe2" height="32%" width="99.5%" src="http://carts.sockshop-staging.xxx.xxx.xxx.xxx.xip.io/"></iframe></div>
-    <div class="bot"><iframe id="iframe3" height="32%" width="99.5%" src="http://carts.sockshop-production.xxx.xxx.xxx.xxx.xip.io/"></iframe></div>
+    <div class="top"><iframe id="iframe1" height="32%" width="99.5%" src="http://carts.sockshop-dev.xxx.xxx.xxx.xxx.nip.io/"></iframe></div>
+    <div class="mid"><iframe id="iframe2" height="32%" width="99.5%" src="http://carts.sockshop-staging.xxx.xxx.xxx.xxx.nip.io/"></iframe></div>
+    <div class="bot"><iframe id="iframe3" height="32%" width="99.5%" src="http://carts.sockshop-production.xxx.xxx.xxx.xxx.nip.io/"></iframe></div>
 </body>
 </html>             
